# Jrl2

./: .gitignore  LICENSE  README.md  pyproject.toml
jrl2/: environment.py  robot.py
scripts/: generate_filtering_data.py  hello.py  lint.sh  test.sh  visualize_robot.py
src/jrl2/: collision_detection.py  collision_detection_single_scene.py  math_utils.py  robot.py  robots.py  scene.py  types.py  visualization.py
src/jrl2/collision_filtering_data/: __init__.py  panda.yaml  ur10.yaml  ur5.yaml
tests/: test_collision_detection.py  test_robot.py  test_robots.py  test_scene.py
