[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jrl2"
version = "0.1.0"
description = "Jeremy's Robotics Library, v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "pytest>=8.4.1",
   "robot-descriptions>=1.20.0",
   "ruff>=0.9.2",
   "torch>=2.5.1",
   "tqdm>=4.67.1",
   "trimesh>=4.8.0",
   "viser>=1.0.6",
   "yourdfpy>=0.0.58",
]
